<resources>
    <string name="app_name">Call And Pay</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="enter_merchant_id">Enter Merchant ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="kollo">Kollo</string>
    <string name="new_account">New Account</string>
    <string name="others">Others</string>
    <string name="others1">Others</string>
    <string name="p_vending">P-Vending</string>
    <string name="q_cash">Q-Cash</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="tickets">Tickets</string>
    <string name="string_tickets" />
    <string name="top_up">Top Up</string>
    <string name="utilities">Utilities</string>
    <string name="cogwheel">cogwheel</string>
    <string name="construction">construction</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="enter_first_name">First Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="enter_other_name">Other Name</string>
    <string name="select_city" />
    <string name="address">Address</string>
    <string name="last_name">Last Name</string>
    <string name="company">Company</string>
    <string name="enter_email">Email</string>
    <string name="middle_name">Middle Name</string>
    <string name="select_state" />
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">Album Name</string>
    <string name="button">Button</string>
    <string name="test_printer">Test Printer</string>
    <string name="city">City</string>

    <string-array name="gender_arrays">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="title_arrays">
        <item>Select Title</item>
        <item>Mr.</item>
        <item>Mrs</item>
        <item>Ms</item>
    </string-array>

    <string-array name="relationship_arrays">
        <item>Select Relationship</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Uncle</item>
        <item>Aunt</item>
        <item>Husband</item>
        <item>Wife</item>
        <item>Others</item>
    </string-array>
</resources>
