<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_next_of_kin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.collo.phemwaresolutions.collonetworks.NextOfKinActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:id="@+id/txtFirstName"
                style="@style/myMarginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtLastName"
                style="@style/myMarginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerKinGender"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:entries="@array/gender_arrays"
                android:minHeight="10dp"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/txtKinAddress"
                style="@style/myMarginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textMultiLine" />


            <EditText
                android:id="@+id/txtKinPhone"
                style="@style/myMarginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/txtKinEmail"
                style="@style/myMarginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerKinRelationship"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:entries="@array/relationship_arrays"
                android:minHeight="10dp"
                android:spinnerMode="dropdown" />


            <Button
                android:id="@+id/btnPostNextOfKin"
                style="@style/myMarginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorActionButton"
                android:onClick="gotoRegistrationComplete"
                android:text="@string/next"
                android:textColor="#ffffff" />

            </LinearLayout>

    </ScrollView>

</LinearLayout>
